--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,12 +5,6 @@ General
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 1280px;
-  margin: auto;
-  position: relative;
-}
-
 body, html {
   margin: 0;
   font-family: Roboto, sans-serif;
@@ -46,6 +40,10 @@ header img {
 /**\
 Main
 \**/
+main .presentation {
+  text-align: center;
+}
+
 .local {
   display: flex;
   justify-content: center;
@@ -71,6 +69,7 @@ h1 {
 }
 
 .btn_princ {
+  display: inline-block;
   border: 0;
   padding: 0.75rem 1.5rem;
   font-weight: 500;
@@ -98,6 +97,13 @@ h2 {
 
 .fonctionnement {
   padding: 2rem 1rem;
+}
+
+.fonctionnement ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  counter-reset: compteListe;
 }
 
 .step {
@@ -162,7 +168,44 @@ h2 {
   position: relative;
   display: flex;
   align-items: center;
-  margin: 0 0 0.25rem;
+}
+
+.rest_name {
+  flex: 1;
+}
+
+.heart {
+  height: 2rem;
+  width: 2rem;
+  background-color: initial;
+  border: 0 solid transparent;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.heart::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.menu__like {
+  transition-duration: 0.25s;
+  background-color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  mix-blend-mode: lighten;
+}
+
+.fa-heart::before {
+  content: "\f004";
 }
 
 h3 {
@@ -183,7 +226,7 @@ footer .container {
   padding: 1rem;
 }
 
-footer li {
+footer li a {
   color: #ffffff;
   margin: 0.5rem 0;
 }
