--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -5,11 +5,6 @@ General
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 1280px;
-  margin: auto;
-  position: relative; 
-}
 
 body, html {
   margin: 0;
@@ -26,6 +21,7 @@ a {
 /**\
 Header
 \**/
+
 .header {
   text-align: center;
   height: 62px;
@@ -45,6 +41,10 @@ header img {
 /**\
 Main
 \**/
+
+main .presentation {
+  text-align: center;
+}
 
 .local {
   display: flex;
@@ -72,6 +72,7 @@ h1 {
 
 
 .btn_princ {
+  display: inline-block;
   border: 0;
   padding: .75rem 1.5rem;
   font-weight: 500;
@@ -101,6 +102,14 @@ h2 {
   padding: 2rem 1rem;
 
 }
+
+.fonctionnement ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  counter-reset: compteListe;
+}
+
 .step {
   padding: 1.5rem;
   margin: 1rem 0 1rem .75rem;
@@ -163,7 +172,44 @@ h2 {
   position: relative;
   display: flex;
   align-items: center;
-  margin: 0 0 .25rem;
+}
+
+.rest_name {
+  flex: 1;
+}
+
+.heart {
+  height: 2rem;
+  width: 2rem;
+  background-color: initial;
+  border: 0 solid transparent;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+}
+
+.heart::before{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.menu__like {
+  transition-duration: .25s;
+  background-color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  mix-blend-mode: lighten;
+}
+
+.fa-heart::before {
+  content: "\f004";
 }
 
 h3 {
@@ -183,7 +229,7 @@ footer .container {
   padding: 1rem;
 }
 
-footer li {
+footer li a{
   color: #ffffff;
   margin: .5rem 0;
 }
