--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,7 @@ header img {
   width: 158px;
   height: 15%;
   padding-top: 18px;
+  margin-bottom: 20px;
 }
 
 /**\
@@ -42,6 +43,31 @@ Main
 \**/
 main .presentation {
   text-align: center;
+}
+
+#form {
+  display: flex;
+  justify-content: center;
+  background: #eaeaea;
+  box-shadow: 0 0.2em 0.5em grey inset;
+  padding: 1rem;
+  margin: 1rem 0 -2rem;
+}
+
+.fa-map-marker-alt {
+  padding: 1rem;
+  font-size: 15px;
+}
+
+.formulaire {
+  position: absolute;
+  left: -999px;
+}
+
+#search {
+  border: none;
+  font-size: 1.5rem;
+  background: #eaeaea;
 }
 
 .local {
@@ -60,6 +86,7 @@ h1 {
   margin-block-end: 0.83em;
   display: flex;
   justify-content: center;
+  margin-top: 4rem;
 }
 
 .reservation p {
@@ -69,6 +96,7 @@ h1 {
 }
 
 .btn_princ {
+  margin-top: 20px;
   display: inline-block;
   border: 0;
   padding: 0.75rem 1.5rem;
@@ -115,6 +143,30 @@ h2 {
   background-color: #f6f6f6;
   display: flex;
   position: relative;
+}
+
+.fonctionnement ul li:hover {
+  transform: scale(1);
+  transition-property: transform;
+  transition-duration: 400ms;
+  background: #F2EAFB;
+}
+
+.fonctionnement ul li:hover:hover {
+  transform: scale(1.05);
+}
+
+.bannier {
+  display: flex;
+  font-weight: 700;
+  padding: 0 1rem;
+  background: #99E2D0;
+  border-radius: 0.2rem;
+  color: #2c9c81;
+  line-height: 2rem;
+  position: absolute;
+  top: 8px;
+  right: 16px;
 }
 
 .step span {
@@ -195,9 +247,18 @@ h2 {
   width: 100%;
 }
 
+.heart:hover {
+  opacity: 100%;
+  background: linear-gradient(0deg, #ff79da, #9356dc);
+    background-clip: border-box;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold;
+}
+
 .menu__like {
   transition-duration: 0.25s;
-  background-color: #f6f6f6;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -206,6 +267,16 @@ h2 {
 
 .fa-heart::before {
   content: "\f004";
+}
+
+.fa-heart:hover {
+  transform: scale(1.15);
+  opacity: 100%;
+  background-image: linear-gradient(0deg, #ff79da, #9356dc);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 h3 {
@@ -219,6 +290,10 @@ h3 {
 /**\
 footer
 \**/
+
+.logo_footer {
+  margin-bottom: 15px;
+}
 footer .container {
   background: #353535;
   display: flex;
@@ -228,9 +303,11 @@ footer .container {
 
 footer li a {
   color: #ffffff;
-  margin: 0.5rem 0;
+  align-items: center;
 }
-
+footer li{
+margin-bottom: 10px;
+}
 footer i {
   width: 1.2rem;
   margin-right: 0.5rem;
